# ISMAGS-py

./: .gitignore  README.md  ismags_demo.ipynb  pyproject.toml
ismags/algorithm/: motif_finder.py  symmetry_handler.py
ismags/cli/: cli.py
ismags/data_structures/: node_iterator.py  priority_queue.py  symmetry_graph.py  symmetry_properties.py
ismags/motifs/: motif.py  motif_instance.py  motif_link.py
ismags/network/: link.py  network.py  node.py
tests/: test_cli.py
